--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3247,7 +3247,7 @@ input, select, textarea {
 		}
 
 		.wrapper.style1 {
-			background-color: #5e42a6;
+			background-color: #383838;
 		}
 
 		.wrapper.style1-alt {
@@ -3531,7 +3531,7 @@ input, select, textarea {
 
 	#sidebar {
 		padding: 2.5em 2.5em 0.5em 2.5em ;
-		background: #312450;
+		background: #222222;
 		cursor: default;
 		height: 100vh;
 		left: 0;
@@ -3768,7 +3768,7 @@ input, select, textarea {
 			}
 
 			#sidebar nav a:before {
-				background: #3c2c62;
+				background: #050407;
 			}
 
 			#sidebar nav a:after {
